<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:transitionName="logo_transition"
            android:id="@+id/logoAnimView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:focusable="false"
            android:padding="@dimen/splash_screen_logo_gif_padding" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/splash_screen_know"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:fontFamily="@font/arimo_bold"
                    android:gravity="center"
                    android:text="@string/app_name_know"
                    android:textColor="@color/app_name_color"
                    android:textSize="@dimen/splash_screen_app_name_size"
                    android:transitionName="@string/know_shared_transition_name"
                    android:visibility="invisible"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/splash_screen_herb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:focusable="false"
                    android:fontFamily="@font/segoe_bold"
                    android:gravity="center"
                    android:text="@string/app_name_herb"
                    android:textColor="@color/app_name_color"
                    android:textSize="@dimen/splash_screen_app_name_size"
                    android:transitionName="@string/herb_shared_transition_name"
                    android:visibility="invisible"
                    tools:visibility="visible" />

            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>